Event driven lighting

--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -30,3 +30,4 @@
 #include <behaviors/mouse_move.dtsi>
 #include <behaviors/mouse_scroll.dtsi>
 #include <behaviors/mouse_keys.dtsi>
+#include <behaviors/stp_indicators.dtsi>
