--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -92,6 +92,7 @@ endif()
 
 target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW app PRIVATE src/behaviors/behavior_rgb_underglow.c)
 target_sources_ifdef(CONFIG_ZMK_BACKLIGHT app PRIVATE src/behaviors/behavior_backlight.c)
+target_sources_ifdef(CONFIG_ZMK_STP_INDICATORS app PRIVATE src/behaviors/behavior_stp_indicators.c)
 
 target_sources_ifdef(CONFIG_ZMK_BATTERY_REPORTING app PRIVATE src/events/battery_state_changed.c)
 target_sources_ifdef(CONFIG_ZMK_BATTERY_REPORTING app PRIVATE src/battery.c)
@@ -108,6 +109,7 @@ target_sources_ifdef(CONFIG_ZMK_BACKLIGHT app PRIVATE src/backlight.c)
 target_sources_ifdef(CONFIG_ZMK_LOW_PRIORITY_WORK_QUEUE app PRIVATE src/workqueue.c)
 target_sources_ifdef(CONFIG_ZMK_PROFILESWITCH app PRIVATE src/profile_switch.c)
 
+target_sources_ifdef(CONFIG_ZMK_STP_INDICATORS app PRIVATE src/stp_indicators.c)
 target_sources(app PRIVATE src/main.c)
 
 add_subdirectory(src/display/)
