--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -22,3 +22,5 @@
 #include <behaviors/mouse_key_press.dtsi>
 #include <behaviors/soft_off.dtsi>
 #include <behaviors/studio_unlock.dtsi>
+#include <behaviors/mouse_move.dtsi>
+#include <behaviors/mouse_scroll.dtsi>
