--- a/app/boards/arm/bt60/bt60_defconfig
+++ b/app/boards/arm/bt60/bt60_defconfig
@@ -14,6 +14,7 @@ CONFIG_PINCTRL=y
 
 CONFIG_ZMK_USB_LOGGING=y
 
+CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_TRACKPAD=y
 CONFIG_ZMK_TRACKPAD_MOUSE_MODE=y
 CONFIG_ZMK_TRACKPAD_TICK_DURATION=3
