--- a/app/west.yml
+++ b/app/west.yml
@@ -29,5 +29,13 @@ manifest:
           - openthread
           - edtt
           - trusted-firmware-m
+    - name: nanopb
+      revision: 65cbefb4695bc7af1cb733ced99618afb3586b20
+      path: modules/lib/nanopb
+      remote: zephyrproject-rtos
+    - name: zmk-studio-messages
+      revision: 41ec8c415e7846ac702d361a74fcdd5713c770df
+      path: modules/msgs/zmk-studio-messages
+      remote: zmkfirmware
   self:
     west-commands: scripts/west-commands.yml
