--- a/app/boards/arm/bt60/bt60_defconfig
+++ b/app/boards/arm/bt60/bt60_defconfig
@@ -16,6 +16,8 @@ CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_TRACKPAD=y
+CONFIG_ZMK_TRACKPAD_MOUSE_MODE=y
+CONFIG_ZMK_TRACKPAD_TICK_DURATION=3
 CONFIG_ZMK_TRACKPAD_PHYSICAL_X=650
 CONFIG_ZMK_TRACKPAD_PHYSICAL_Y=1065
 CONFIG_ZMK_TRACKPAD_LOGICAL_X=700
