--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -29,3 +29,4 @@
 #include <behaviors/studio_unlock.dtsi>
 #include <behaviors/mouse_move.dtsi>
 #include <behaviors/mouse_scroll.dtsi>
+#include <behaviors/mouse_keys.dtsi>
