--- a/app/boards/arm/stp/stp_defconfig
+++ b/app/boards/arm/stp/stp_defconfig
@@ -61,6 +61,8 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 # BT configuration
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_DIS_MANUF="Kinesis Corporation"
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
 
 # Misc configuration
 CONFIG_USB_DEVICE_VID=0x29EA
