--- a/app/src/studio/Kconfig
+++ b/app/src/studio/Kconfig
@@ -7,9 +7,12 @@ menuconfig ZMK_STUDIO
     # These two save stack size
     imply NANOPB_NO_ERRMSG
     imply NANOPB_WITHOUT_64BIT
+    select SETTINGS
     select ZMK_BEHAVIOR_METADATA
     select ZMK_BEHAVIOR_LOCAL_IDS
     select RING_BUFFER
+    select ZMK_KEYMAP_SETTINGS_STORAGE
+    select ZMK_KEYMAP_LAYER_REORDERING
     help
       Add firmware support for realtime keymap updates (ZMK Studio)
 
