--- a/app/boards/arm/stp/stp_defconfig
+++ b/app/boards/arm/stp/stp_defconfig
@@ -79,3 +79,5 @@ CONFIG_ZMK_PROFILESWITCH=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_FULL=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+CONFIG_ZMK_USB_LOGGING=y
