--- a/app/boards/arm/stp/stp_defconfig
+++ b/app/boards/arm/stp/stp_defconfig
@@ -62,7 +62,7 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_DIS_MANUF="Kinesis Corporation"
+#CONFIG_BT_DIS_MANUF="Kinesis Corporation"
 CONFIG_BT_DIS_PNP_VID=0x29EA
 CONFIG_BT_DIS_PNP_PID=0x1000
 CONFIG_BT_MAX_CONN=2
@@ -72,10 +72,13 @@ CONFIG_BT_MAX_PAIRED=2
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_VID=0x29EA
 CONFIG_USB_DEVICE_PID=0x1000
-CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
+#CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
 
 # Misc configuration
 CONFIG_ZMK_PROFILESWITCH=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_FULL=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_KEYBOARD_NAME="Tester"
