Mouse mode only trackpad

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -395,6 +395,12 @@ menu "Mouse Options"
 config ZMK_MOUSE
     bool "Enable ZMK mouse emulation"
 
+config ZMK_TRACKPAD
+    bool "trackpad mode"
+
+config ZMK_TRACKPAD_REVERSE_SCROLL
+    bool "Reverse Scroll Direction"
+
 #Mouse Options
 endmenu
 
