--- a/app/dts/behaviors/backlight.dtsi
+++ b/app/dts/behaviors/backlight.dtsi
@@ -6,8 +6,11 @@
 
  / {
     behaviors {
+#if !defined(ZMK_STUDIO_BEHAVIORS_KEEP_ALL) && !defined(ZMK_STUDIO_BEHAVIORS_KEEP_BL)
+        /omit-if-no-ref/
+#endif
         // Behavior can be invoked on peripherals, so name must be <= 8 characters.
-        /omit-if-no-ref/ bl: bcklight {
+        bl: bcklight {
             compatible = "zmk,behavior-backlight";
             #binding-cells = <2>;
             display-name = "Backlight";
