--- a/app/boards/arm/stp/stp.dts
+++ b/app/boards/arm/stp/stp.dts
@@ -11,6 +11,7 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
 #include "pinctrl.dtsi"
+#include <physical_layouts.dtsi>
 
 / {
     model = "STP";
@@ -22,14 +23,13 @@
         zephyr,flash = &flash0;
         zmk,kscan = &kscan0;
         zmk,backlight = &backlight;
-        zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &physical_layout;
         zmk,battery = &vbatt;
-        zephyr,console = &cdc_acm_uart;
         zmk,profileswitch = &profileswitch;
         zmk,indicators = &led_strip;
     };
 
-    default_transform: keymap_transform_0 {
+    ansi_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <16>;
         rows = <6>;
@@ -99,6 +99,102 @@
         compatible = "zmk,profile-switch";
         switch-gpios = <&gpio0 29 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
     };
+
+    physical_layout: physical_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "ANSI Layout";
+
+        kscan = <&kscan0>;
+        transform = <&ansi_transform>;
+
+        keys  //                     w   h    x    y     rot   rx   ry
+            = <&key_physical_attrs 100 100    0    0       0    0    0>
+            , <&key_physical_attrs 100 100  100    0       0    0    0>
+            , <&key_physical_attrs 100 100  200    0       0    0    0>
+            , <&key_physical_attrs 100 100  300    0       0    0    0>
+            , <&key_physical_attrs 100 100  400    0       0    0    0>
+            , <&key_physical_attrs 100 100  500    0       0    0    0>
+            , <&key_physical_attrs 100 100  600    0       0    0    0>
+            , <&key_physical_attrs 100 100 1000    0       0    0    0>
+            , <&key_physical_attrs 100 100 1100    0       0    0    0>
+            , <&key_physical_attrs 100 100 1200    0       0    0    0>
+            , <&key_physical_attrs 100 100 1300    0       0    0    0>
+            , <&key_physical_attrs 100 100 1400    0       0    0    0>
+            , <&key_physical_attrs 100 100 1500    0       0    0    0>
+            , <&key_physical_attrs 100 100 1600    0       0    0    0>
+            , <&key_physical_attrs 100 100 1700    0       0    0    0>
+            , <&key_physical_attrs 100 100 1800    0       0    0    0>
+            , <&key_physical_attrs 100 100    0  100       0    0    0>
+            , <&key_physical_attrs 100 100  100  100       0    0    0>
+            , <&key_physical_attrs 100 100  200  100       0    0    0>
+            , <&key_physical_attrs 100 100  300  100       0    0    0>
+            , <&key_physical_attrs 100 100  400  100       0    0    0>
+            , <&key_physical_attrs 100 100  500  100       0    0    0>
+            , <&key_physical_attrs 100 100  600  100       0    0    0>
+            , <&key_physical_attrs 100 100 1000  100       0    0    0>
+            , <&key_physical_attrs 100 100 1100  100       0    0    0>
+            , <&key_physical_attrs 100 100 1200  100       0    0    0>
+            , <&key_physical_attrs 100 100 1300  100       0    0    0>
+            , <&key_physical_attrs 100 100 1400  100       0    0    0>
+            , <&key_physical_attrs 100 100 1500  100       0    0    0>
+            , <&key_physical_attrs 200 100 1600  100       0    0    0>
+            , <&key_physical_attrs 100 100 1800  100       0    0    0>
+            , <&key_physical_attrs 150 100    0  200       0    0    0>
+            , <&key_physical_attrs 100 100  150  200       0    0    0>
+            , <&key_physical_attrs 100 100  250  200       0    0    0>
+            , <&key_physical_attrs 100 100  350  200       0    0    0>
+            , <&key_physical_attrs 100 100  450  200       0    0    0>
+            , <&key_physical_attrs 100 100  550  200       0    0    0>
+            , <&key_physical_attrs 100 100  950  200       0    0    0>
+            , <&key_physical_attrs 100 100 1050  200       0    0    0>
+            , <&key_physical_attrs 100 100 1150  200       0    0    0>
+            , <&key_physical_attrs 100 100 1250  200       0    0    0>
+            , <&key_physical_attrs 100 100 1350  200       0    0    0>
+            , <&key_physical_attrs 100 100 1450  200       0    0    0>
+            , <&key_physical_attrs 100 100 1550  200       0    0    0>
+            , <&key_physical_attrs 150 100 1650  200       0    0    0>
+            , <&key_physical_attrs 100 100 1800  200       0    0    0>
+            , <&key_physical_attrs 175 100    0  300       0    0    0>
+            , <&key_physical_attrs 100 100  175  300       0    0    0>
+            , <&key_physical_attrs 100 100  275  300       0    0    0>
+            , <&key_physical_attrs 100 100  375  300       0    0    0>
+            , <&key_physical_attrs 100 100  475  300       0    0    0>
+            , <&key_physical_attrs 100 100  575  300       0    0    0>
+            , <&key_physical_attrs 100 100  975  300       0    0    0>
+            , <&key_physical_attrs 100 100 1075  300       0    0    0>
+            , <&key_physical_attrs 100 100 1175  300       0    0    0>
+            , <&key_physical_attrs 100 100 1275  300       0    0    0>
+            , <&key_physical_attrs 100 100 1375  300       0    0    0>
+            , <&key_physical_attrs 100 100 1475  300       0    0    0>
+            , <&key_physical_attrs 225 100 1575  300       0    0    0>
+            , <&key_physical_attrs 100 100 1800  300       0    0    0>
+            , <&key_physical_attrs 225 100    0  400       0    0    0>
+            , <&key_physical_attrs 100 100  225  400       0    0    0>
+            , <&key_physical_attrs 100 100  325  400       0    0    0>
+            , <&key_physical_attrs 100 100  425  400       0    0    0>
+            , <&key_physical_attrs 100 100  525  400       0    0    0>
+            , <&key_physical_attrs 100 100  625  400       0    0    0>
+            , <&key_physical_attrs 100 100 1025  400       0    0    0>
+            , <&key_physical_attrs 100 100 1125  400       0    0    0>
+            , <&key_physical_attrs 100 100 1225  400       0    0    0>
+            , <&key_physical_attrs 100 100 1325  400       0    0    0>
+            , <&key_physical_attrs 100 100 1425  400       0    0    0>
+            , <&key_physical_attrs 175 100 1525  400       0    0    0>
+            , <&key_physical_attrs 100 100 1700  400       0    0    0>
+            , <&key_physical_attrs 100 100 1800  400       0    0    0>
+            , <&key_physical_attrs 125 100    0  500       0    0    0>
+            , <&key_physical_attrs 125 100  125  500       0    0    0>
+            , <&key_physical_attrs 125 100  250  500       0    0    0>
+            , <&key_physical_attrs 300 100  375  500       0    0    0>
+            , <&key_physical_attrs 300 100 1000  500       0    0    0>
+            , <&key_physical_attrs 100 100 1300  500       0    0    0>
+            , <&key_physical_attrs 100 100 1400  500       0    0    0>
+            , <&key_physical_attrs 100 100 1500  500       0    0    0>
+            , <&key_physical_attrs 100 100 1600  500       0    0    0>
+            , <&key_physical_attrs 100 100 1700  500       0    0    0>
+            , <&key_physical_attrs 100 100 1800  500       0    0    0>
+            ;
+    };
 };
 
 &adc {
@@ -124,11 +220,8 @@
     status = "okay";
 };
 
-&usbd {
+zephyr_udc0: &usbd {
     status = "okay";
-    cdc_acm_uart: cdc_acm_uart {
-    compatible = "zephyr,cdc-acm-uart";
-  };
 };
 
 
